--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -4,6 +4,8 @@
   "license": "MIT",
   "dependencies": {
     "next": "^10.0.0",
+    "next-then-image": "^0.0.5",
+    "next-then-image-util": "^0.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "vercel": "^20.1.2"
