--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -6,6 +6,7 @@
     "next": "^10.0.0",
     "next-then-image": "^0.0.5",
     "next-then-image-util": "^0.0.4",
+    "next-transpile-modules": "^4.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "vercel": "^20.1.2"
