--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,7 @@
     "type": "git",
     "url": "https://github.com/wheredoesyourmindgo/next-then-image"
   },
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "dist/index.js",
   "license": "MIT",
   "source": "src/index.ts",
@@ -39,6 +39,6 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "sharp": "^0.26.2"
+    "jimp": "^0.16.1"
   }
 }
